--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": ">=14.15.0"
   },
   "dependencies": {
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.234.0",
     "@aws-sdk/client-dynamodb": "^3.223.0",
     "@aws-sdk/client-ses": "^3.226.0",
     "@aws-sdk/client-sns": "^3.226.0",
